@@ -2,6 +2,7 @@ Process Hacker
 
 2.6
  * NEW/IMPROVED:
+   * Sorting for most lists is now much faster
    * Hide Signed Processes option
    * Added plugin for uploading files to online virus 
      scanners
